--- a/app/views/Admin/Projects.html
+++ b/app/views/Admin/Projects.html
@@ -30,8 +30,8 @@
           <td><img src="{{.CoverUrl}}" alt="Project Logo"></td>
           <td>{{.Tags}}</td>
           {{if $user.IsAdmin}}<td>
-            <a href="/admin/projects/{{.Id}}" class="btn btn-primary btn-sm">Edit</a>
-            <a href="/admin/projects/{{.Id}}/delete" class="btn btn-danger btn-sm">Delete</a>
+            <a href="/admin/projects/{{.ID}}" class="btn btn-primary btn-sm">Edit</a>
+            <a href="/admin/projects/{{.ID}}/delete" class="btn btn-danger btn-sm">Delete</a>
           </td>{{end}}
         </tr>
         {{end}}
