--- a/app/views/App/Projects.html
+++ b/app/views/App/Projects.html
@@ -14,7 +14,7 @@
 					<div class="panel-body">
 						<div class="col-sm-4">
 							{{if .CoverUrl}}<img src="{{.CoverUrl}}" alt="Project Logo" class="img-square" />
-							{{else}}<div class="pattern" style="background:url('{{pattern .Id}}')"></div>{{end}}
+							{{else}}<div class="pattern" style="background:url('{{pattern .ID}}')"></div>{{end}}
 						</div>
 						<div class="col-sm-8">
 							{{markdown .Description}}
