--- a/app/views/Admin/About.html
+++ b/app/views/Admin/About.html
@@ -36,8 +36,8 @@
           <td><a href="{{.Url}}" target="_blank">Reference</a></td>
           {{if $user.IsAdmin}}
           <td>
-            <a href="/admin/about/stays/{{.Id}}" class="btn btn-primary btn-sm">Edit</a>
-            <a href="/admin/about/stays/{{.Id}}/delete" class="btn btn-danger btn-sm">Delete</a>
+            <a href="/admin/about/stays/{{.ID}}" class="btn btn-primary btn-sm">Edit</a>
+            <a href="/admin/about/stays/{{.ID}}/delete" class="btn btn-danger btn-sm">Delete</a>
           </td>{{end}}
         </tr>
         {{end}}
@@ -60,8 +60,8 @@
   <div class="col-sm-4"><img src="{{.CoverUrl}}" alt="Location Logo"></div>
   {{if $user.IsAdmin}}
   <div class="col-sm-3">
-    <a href="/admin/about/places/{{.Id}}" class="btn btn-primary btn-sm">Edit</a>
-    <a href="/admin/about/places/{{.Id}}/delete" class="btn btn-danger btn-sm">Delete</a>
+    <a href="/admin/about/places/{{.ID}}" class="btn btn-primary btn-sm">Edit</a>
+    <a href="/admin/about/places/{{.ID}}/delete" class="btn btn-danger btn-sm">Delete</a>
   </div>{{end}}
 </div>
 {{end}}
