--- a/app/views/Admin/EditProject.html
+++ b/app/views/Admin/EditProject.html
@@ -1,4 +1,4 @@
-{{if eq .project.Id -1}}
+{{if eq .project.ID -1}}
 {{set . "title" "Create a new Project"}}
 {{else}}
 {{set . "title" "Modify Project"}}
@@ -20,7 +20,7 @@
 		{{template "Admin/adminMenu.html" .}}
 	</div>
 	<div class="col-sm-8">
-		<form method="POST" action="/admin/projects/{{.project.Id}}">
+		<form method="POST" action="/admin/projects/{{.project.ID}}">
 			<div class="form-group">
 				<label for="inputTitle">Title</label>
 				<input type="text" class="form-control" id="inputTitle" name="project.Title" placeholder="Title" value="{{.project.Title}}" />
@@ -47,7 +47,7 @@
 				</label>
 			</div>
 
-			<input type="hidden" name="project.Id" value="{{.project.Id}}" />
+			<input type="hidden" name="project.ID" value="{{.project.ID}}" />
 			<button type="submit" class="btn btn-default">Save</button>
 		</form>
 	</div>
