--- a/app/views/Admin/EditStay.html
+++ b/app/views/Admin/EditStay.html
@@ -1,4 +1,4 @@
-{{if eq .stay.Id -1}}
+{{if eq .stay.ID -1}}
 {{set . "title" "Where are you now?"}}
 {{else}}
 {{set . "title" "Modify Stay"}}
@@ -23,13 +23,13 @@
 
 	<div class="col-sm-8">
 		<h3>{{.title}}</h3>
-		<form role="form" method="POST" action="/admin/about/stays/{{.stay.Id}}">
+		<form role="form" method="POST" action="/admin/about/stays/{{.stay.ID}}">
 			<div class="form-group">
 				<label for="selectorStay">Place</label>
-        <select class="form-control" id="selectorStay" name="stay.PlaceId">
-					{{$selected := .stay.PlaceId}}
+        <select class="form-control" id="selectorStay" name="stay.PlaceID">
+					{{$selected := .stay.PlaceID}}
           {{range .places}}
-          <option value="{{.Id}}" {{if eq .Id $selected}}selected{{end}}>{{.Name}}</option>
+          <option value="{{.ID}}" {{if eq .ID $selected}}selected{{end}}>{{.Name}}</option>
           {{end}}
         </select>
 			</div>
@@ -46,7 +46,7 @@
 				<input type="text" class="form-control" id="inputUrl" name="stay.Url" placeholder="http://" value="{{.stay.Url}}" />
 			</div>
 
-			<input type="hidden" name="stay.Id" value="{{.stay.Id}}" />
+			<input type="hidden" name="stay.ID" value="{{.stay.ID}}" />
 			<button type="submit" class="btn btn-default">Save</button>
 		</form>
 	</div>
